исправлены карусесели под моб устройства

--- a/src/dlya_azs.html
+++ b/src/dlya_azs.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Кавомашина для бізнесу бескоштовно | Оренда кавового обладнання</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
@@ -402,10 +397,7 @@
               додаткові смачні гарячі напої.
             </li>
             <li>Повний безкоштовний сервісний супровід кавомашини від наших фахіфців.</li>
-            <li>
-              Майстер-клас для ваших співробітників по роботі з обраної
-              кавоваркою.
-            </li>
+            <li>Майстер-клас для ваших співробітників по роботі з обраної кавоваркою.</li>
             <li>
               Необхідна рекламна продукція, яка допоможе вам підняти продаж кави та
               гарячих напоїв.
@@ -428,7 +420,7 @@
           </div>
         </div>
         <div class="row justify-content-md-center">
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-touch">
                 <img
@@ -438,7 +430,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-korinto">
                 <img
@@ -448,14 +440,17 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-coro">
-                <img src="./img/dlya_azs/necta_koro_prime.png" class="scale" alt="Оренда кавових апаратів Рівне" />
+                <img
+                  src="./img/dlya_azs/necta_koro_prime.png"
+                  class="scale"
+                  alt="Оренда кавових апаратів Рівне" />
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-style">
                 <img
@@ -475,40 +470,51 @@
           <div class="container text-center">
             <div class="row justify-content-between">
               <div class="col-4">КАВА ТА ГАРЯЧІ НАПОЇ</div>
-              <div class="col-4">
-              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="slider">
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-beans">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide1.webp" alt="зернова кава Beans Blend" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide1.webp"
+                  alt="зернова кава Beans Blend" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-elite">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide2.webp" alt="зернова кава elite" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide2.webp"
+                  alt="зернова кава elite" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-milk">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide3.webp" alt="молочна суміш для кавомашин" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide3.webp"
+                  alt="молочна суміш для кавомашин" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-irish">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide4.webp" alt="розчинне капучино Айріш" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide4.webp"
+                  alt="розчинне капучино Айріш" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-catalana">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide5.webp"  alt="капучино каталана"/>
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide5.webp"
+                  alt="капучино каталана" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-cacao">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide6.webp" alt="какао розчинне" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide6.webp"
+                  alt="какао розчинне" />
+              </a>
             </div>
           </div>
         </div>
@@ -655,28 +661,62 @@
         <div class="row">
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
-              <p>Кава на заправці — це не лише зручність, але й важлива частина сервісу, який ви пропонуєте своїм клієнтам. 
-                Якісна кава може зробити їхню подорож приємнішою, та саме тому оренда кавомашини для АЗС стає ідеальним рішенням 
-                для залучення нових клієнтів та підвищення їхньої лояльності.</p>
-                <h4>Чому варто орендувати кавомашину для вашої АЗС?</h4>
-                <ol>
-                  <li><strong>Підвищення рівня обслуговування.</strong> Наявність професійної кавомашини на вашій АЗС підніме рівень 
-                    сервісу на новий щабель. Клієнти зможуть насолодитися свіжою, якісною кавою, що сприятиме їхньому задоволенню та бажанню повертатися саме до вас.</li>
-                    <li><strong>Безкоштовна установка та обслуговування.</strong> Ми надаємо комплексний сервіс: від безкоштовної установки кавомашини до регулярного технічного 
-                      обслуговування. Ви отримуєте готове рішення без зайвих турбот, зосереджуючись на своєму бізнесі.</li>
-                      <li><strong>Збільшення прибутку.</strong> Кава — це додатковий дохід для вашої АЗС. Завдяки привабливим умовам оренди, ви зможете запропонувати клієнтам 
-                        популярний продукт та отримувати додатковий прибуток без значних інвестицій.</li>
-                        <li><strong>Гнучкі умови оренди.</strong> Ми пропонуємо різні пакети оренди кавомашин, що дозволяють вам обрати найбільш підходящий варіант залежно від потреб вашої 
-                          АЗС. Незалежно від розміру вашої станції, ми знайдемо оптимальне рішення.</li>
-                          <li><strong>Різноманітність кавових напоїв.</strong> Оренда кавомашини дозволяє пропонувати широкий асортимент напоїв: від класичного еспресо до капучино та лате. 
-                            Ваші клієнти завжди знайдуть щось до смаку, що перетворить їхню зупинку на справжнє задоволення.</li>
-                          </ol>
-                            <h4>Переваги співпраці з нами</h4>
-                            <ul>
-                              <li><strong>Якісні кавомашини</strong> від провідних виробників, які забезпечують стабільно високу якість напоїв.</li>
-                              <li><strong>Повна сервісна падтримка,</strong> що гарантує безперебійну роботу обладнання..</li>
-                              <li><strong>Навчання персоналу,</strong> щоб ваші співробітники могли без проблем працювати з кавомашиною та надавати найкращий сервіс.</li>
-                            </ul>
+              <p>
+                Кава на заправці — це не лише зручність, але й важлива частина сервісу,
+                який ви пропонуєте своїм клієнтам. Якісна кава може зробити їхню подорож
+                приємнішою, та саме тому оренда кавомашини для АЗС стає ідеальним рішенням
+                для залучення нових клієнтів та підвищення їхньої лояльності.
+              </p>
+              <h4>Чому варто орендувати кавомашину для вашої АЗС?</h4>
+              <ol>
+                <li>
+                  <strong>Підвищення рівня обслуговування.</strong>
+                  Наявність професійної кавомашини на вашій АЗС підніме рівень сервісу на
+                  новий щабель. Клієнти зможуть насолодитися свіжою, якісною кавою, що
+                  сприятиме їхньому задоволенню та бажанню повертатися саме до вас.
+                </li>
+                <li>
+                  <strong>Безкоштовна установка та обслуговування.</strong>
+                  Ми надаємо комплексний сервіс: від безкоштовної установки кавомашини до
+                  регулярного технічного обслуговування. Ви отримуєте готове рішення без
+                  зайвих турбот, зосереджуючись на своєму бізнесі.
+                </li>
+                <li>
+                  <strong>Збільшення прибутку.</strong>
+                  Кава — це додатковий дохід для вашої АЗС. Завдяки привабливим умовам
+                  оренди, ви зможете запропонувати клієнтам популярний продукт та
+                  отримувати додатковий прибуток без значних інвестицій.
+                </li>
+                <li>
+                  <strong>Гнучкі умови оренди.</strong>
+                  Ми пропонуємо різні пакети оренди кавомашин, що дозволяють вам обрати
+                  найбільш підходящий варіант залежно від потреб вашої АЗС. Незалежно від
+                  розміру вашої станції, ми знайдемо оптимальне рішення.
+                </li>
+                <li>
+                  <strong>Різноманітність кавових напоїв.</strong>
+                  Оренда кавомашини дозволяє пропонувати широкий асортимент напоїв: від
+                  класичного еспресо до капучино та лате. Ваші клієнти завжди знайдуть
+                  щось до смаку, що перетворить їхню зупинку на справжнє задоволення.
+                </li>
+              </ol>
+              <h4>Переваги співпраці з нами</h4>
+              <ul>
+                <li>
+                  <strong>Якісні кавомашини</strong>
+                  від провідних виробників, які забезпечують стабільно високу якість
+                  напоїв.
+                </li>
+                <li>
+                  <strong>Повна сервісна падтримка,</strong>
+                  що гарантує безперебійну роботу обладнання..
+                </li>
+                <li>
+                  <strong>Навчання персоналу,</strong>
+                  щоб ваші співробітники могли без проблем працювати з кавомашиною та
+                  надавати найкращий сервіс.
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -887,18 +927,23 @@
           autoplay: true,
           centerMode: false,
           variableWidth: false,
-          adaptiveHeight: true,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
               settings: {
                 slidesToShow: 3,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
+              },
+            },
+            {
+              breakpoint: 560,
+              settings: {
+                slidesToShow: 1,
               },
             },
           ],
