--- a/src/dlya_ofisov.html
+++ b/src/dlya_ofisov.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content=/>
+    <meta name="description" content= /> <meta name="keywords" content=/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Оренда кавомашини для офісу Київ, Тернопіль, Харків, Вінниця, Хмельницький</title>
+    <title>
+      Оренда кавомашини для офісу Київ, Тернопіль, Харків, Вінниця, Хмельницький
+    </title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -362,10 +359,7 @@
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
-                <h5 class="fw-bold">
-                  Залучення та утримання талантів
-                 
-                </h5>
+                <h5 class="fw-bold">Залучення та утримання талантів</h5>
                 <p class="card-text main-text-size">
                   Сучасні офіси із зручностями, такими як кавові апарати, більш привабливі
                   для висококваліфікованих спеціалістів.
@@ -377,10 +371,7 @@
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
-                <h5 class="fw-bold">
-                  Економія коштів
-                  
-                </h5>
+                <h5 class="fw-bold">Економія коштів</h5>
                 <p class="card-text main-text-size">
                   Оренда кавового апарату дешевша, ніж щоденні витрати на купівлю кави в
                   кафе.
@@ -402,19 +393,25 @@
           <h5 class="">Що ми пропонуємо?</h5>
           <ul class="main-text-size">
             <li>
-              Кавова машина в оренду для маленьких та великих офісів надається бескоштовно, за умови придбання нашої кави. 
+              Кавова машина в оренду для маленьких та великих офісів надається
+              бескоштовно, за умови придбання нашої кави.
             </li>
             <li>
-              Окрім звичайної зернової кави, ми пропоноємо великий ассортимент інших смачних гарячих напоїв, таких як
-              капучино, мокачино, лате, шоколад, чай та інші.
+              Окрім звичайної зернової кави, ми пропоноємо великий ассортимент інших
+              смачних гарячих напоїв, таких як капучино, мокачино, лате, шоколад, чай та
+              інші.
             </li>
-            <li>Вам не треба турбуватися про ремонт та наповнення кавомашини. Ми забеспечимо повний сервісний супровід протягом всього орендного періоду.</li>
+            <li>
+              Вам не треба турбуватися про ремонт та наповнення кавомашини. Ми забеспечимо
+              повний сервісний супровід протягом всього орендного періоду.
+            </li>
             <li>
               Наші фахівці проведуть майстер-клас для ваших співробітників по роботі з
               обраної кавоваркою.
             </li>
             <li>
-              Якщо у вас декілька феліалі, ми можемо поставити кавомашину у кожний, за умови, що у цьому регіоні є наш представник.
+              Якщо у вас декілька феліалі, ми можемо поставити кавомашину у кожний, за
+              умови, що у цьому регіоні є наш представник.
             </li>
           </ul>
         </div>
@@ -434,7 +431,7 @@
           </div>
         </div>
         <div class="row justify-content-md-center">
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-touch">
                 <img
@@ -444,7 +441,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-korinto">
                 <img
@@ -454,14 +451,17 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-coro">
-                <img src="./img/dlya_ofisov/necta_koro_prime.png" class="scale" alt="Автоматична кавомашина" />
+                <img
+                  src="./img/dlya_ofisov/necta_koro_prime.png"
+                  class="scale"
+                  alt="Автоматична кавомашина" />
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-minibona">
                 <img
@@ -481,40 +481,51 @@
           <div class="container text-center">
             <div class="row justify-content-between">
               <div class="col-4">КАВА ТА ГАРЯЧІ НАПОЇ</div>
-              <div class="col-4">
-              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="slider">
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-beans">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide1.webp" alt="зернова кава Beans Blend" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide1.webp"
+                  alt="зернова кава Beans Blend" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-elite">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide2.webp" alt="зернова кава elite" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide2.webp"
+                  alt="зернова кава elite" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-milk">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide3.webp" alt="молочна суміш для кавомашин" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide3.webp"
+                  alt="молочна суміш для кавомашин" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-irish">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide4.webp" alt="розчинне капучино Айріш" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide4.webp"
+                  alt="розчинне капучино Айріш" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-catalana">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide5.webp"  alt="капучино каталана"/>
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide5.webp"
+                  alt="капучино каталана" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-cacao">
-              <img data-lazy="./img/dlya_magazinov_i_setey/slider/slide6.webp" alt="какао розчинне" />
-            </a>
+                <img
+                  data-lazy="./img/dlya_magazinov_i_setey/slider/slide6.webp"
+                  alt="какао розчинне" />
+              </a>
             </div>
           </div>
         </div>
@@ -661,24 +672,46 @@
         <div class="row">
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
-              <p>Усі ми знаємо, що кава — це більше ніж просто напій. Це ритуал, який об'єднує колектив, заряджає 
-                енергією та надихає на нові звершення. Кава в офісі стає важливою частиною робочого дня, допомагаючи 
-                співробітникам залишатися зосередженими та мотивованими.</p>
-                <h4>Чому якісна кава важлива для вашого офісу?</h4>
-                <ol>
-                <li><strong>Підвищення продуктивності.</strong> Дослідження показують, що кава може допомогти покращити 
-                  концентрацію та розумову активність. Вона сприяє кращому виконанню завдань, особливо вранці та після обіду.</li>
-                  <li><strong>Створення атмосфери.</strong> Аромат свіжозвареної кави наповнює офіс приємною атмосферою, яка допомагає зняти 
-                    напругу та робить робоче середовище більш комфортним.</li>
-                    <li><strong>Соціалізація.</strong> Кава — це привід для спілкування. Спільні кавові перерви допомагають зміцнити командний дух, 
-                      створюючи невимушену можливість для обговорення ідей та вирішення робочих питань.</li>
-                      <li><strong>Турбота про співробітників.</strong> Надання якісної кави в офісі демонструє турботу про благополуччя персоналу. 
-                        Це невеликий, але важливий бонус, який підвищує лояльність співробітників до компанії.</li>
-                      </ol>
-                        <h4>Наші рішення для вашого офісу</h4>
-                        <p>Ми пропонуємо комплексний підхід до організації кавового сервісу в офісі. Наші кавомашини та ретельно підібрані рецепти 
-                          напоїв забезпечать максимальний смак та задоволення для вашої команди. Від обслуговування обладнання до проведення майстер-класів 
-                          для вашого персоналу — ми надамо все необхідне для того, щоб кожна кавова перерва стала особливою.</p>
+              <p>
+                Усі ми знаємо, що кава — це більше ніж просто напій. Це ритуал, який
+                об'єднує колектив, заряджає енергією та надихає на нові звершення. Кава в
+                офісі стає важливою частиною робочого дня, допомагаючи співробітникам
+                залишатися зосередженими та мотивованими.
+              </p>
+              <h4>Чому якісна кава важлива для вашого офісу?</h4>
+              <ol>
+                <li>
+                  <strong>Підвищення продуктивності.</strong>
+                  Дослідження показують, що кава може допомогти покращити концентрацію та
+                  розумову активність. Вона сприяє кращому виконанню завдань, особливо
+                  вранці та після обіду.
+                </li>
+                <li>
+                  <strong>Створення атмосфери.</strong>
+                  Аромат свіжозвареної кави наповнює офіс приємною атмосферою, яка
+                  допомагає зняти напругу та робить робоче середовище більш комфортним.
+                </li>
+                <li>
+                  <strong>Соціалізація.</strong>
+                  Кава — це привід для спілкування. Спільні кавові перерви допомагають
+                  зміцнити командний дух, створюючи невимушену можливість для обговорення
+                  ідей та вирішення робочих питань.
+                </li>
+                <li>
+                  <strong>Турбота про співробітників.</strong>
+                  Надання якісної кави в офісі демонструє турботу про благополуччя
+                  персоналу. Це невеликий, але важливий бонус, який підвищує лояльність
+                  співробітників до компанії.
+                </li>
+              </ol>
+              <h4>Наші рішення для вашого офісу</h4>
+              <p>
+                Ми пропонуємо комплексний підхід до організації кавового сервісу в офісі.
+                Наші кавомашини та ретельно підібрані рецепти напоїв забезпечать
+                максимальний смак та задоволення для вашої команди. Від обслуговування
+                обладнання до проведення майстер-класів для вашого персоналу — ми надамо
+                все необхідне для того, щоб кожна кавова перерва стала особливою.
+              </p>
             </div>
           </div>
         </div>
@@ -889,18 +922,23 @@
           autoplay: true,
           centerMode: false,
           variableWidth: false,
-          adaptiveHeight: true,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
               settings: {
                 slidesToShow: 3,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
+              },
+            },
+            {
+              breakpoint: 560,
+              settings: {
+                slidesToShow: 1,
               },
             },
           ],
