--- a/src/rashodniki.html
+++ b/src/rashodniki.html
@@ -413,13 +413,13 @@
             </figure>
             <div class="card-body">
               <h3 class="text-center">
-                Картонні стакани для чая Bianchi
+                Картонні стакани для чаю Bianchi
               </h3>
               <small>
                 <p class="lh-sm">Одноразові стаканчики для чаю Bianchi – 
-                  це поєднання стилю, зручності та екологічності. Виготовлена ​​з високоякісного картону, ця склянка ідеальна для колекції чаїв Bianchi.</p>
+                  це поєднання стилю, зручності та екологічності. Виготовлені ​​з високоякісного картону, ці стакани ідеальні для колекції чаїв Bianchi.</p>
                 <p class="lh-sm">
-                  Склянки виготовляються із міцного якісного картону із застосуванням зовнішньої ламінації.
+                  Стакани виготовляються із міцного якісного картону із застосуванням зовнішньої ламінації.
                 </p>
               </small>
             </div>
