--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -451,7 +451,7 @@
           </div>
         </div>
         <div class="row justify-content-md-center">
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-talia-touch-ru">
                 <img
@@ -461,7 +461,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-touch-ru">
                 <img
@@ -471,7 +471,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-korinto-ru">
                 <img
@@ -481,7 +481,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-minibona-ru">
                 <img
@@ -902,18 +902,23 @@
           autoplay: true,
           centerMode: false,
           variableWidth: false,
-          adaptiveHeight: true,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
               settings: {
                 slidesToShow: 3,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
+              },
+            },
+            {
+              breakpoint: 560,
+              settings: {
+                slidesToShow: 1,
               },
             },
           ],
