--- a/src/index.html
+++ b/src/index.html
@@ -979,7 +979,7 @@
       $(document).ready(function () {
         $(".slider").slick({
           arrows: true,
-          slidesToShow: 3,
+          slidesToShow: 4,
           speed: 1000,
           easing: "linear",
           autoplay: true,
@@ -987,13 +987,19 @@
           variableWidth: false,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
+              settings: {
+                slidesToShow: 3,
+              },
+            },
+            {
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 560,
               settings: {
                 slidesToShow: 1,
               },
