--- a/src/ru/dlya_azs.html
+++ b/src/ru/dlya_azs.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Кофемашина для АЗС в аренду бесплатно | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
@@ -431,7 +426,7 @@
           </div>
         </div>
         <div class="row justify-content-md-center">
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-touch-ru">
                 <img
@@ -441,7 +436,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-coro-ru">
                 <img
@@ -451,7 +446,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-korinto-ru">
                 <img
@@ -461,7 +456,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaya-style-ru">
                 <img
@@ -481,40 +476,51 @@
           <div class="container text-center">
             <div class="row justify-content-between">
               <div class="col-4">КОФЕ И ГОРЯЧИЕ НАПИТКИ</div>
-              <div class="col-4">
-              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="slider">
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-beans-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp" alt="кофе зерновой Beabs Blend" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp"
+                  alt="кофе зерновой Beabs Blend" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-elite-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp" alt="кофе в зёрнах Elite" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp"
+                  alt="кофе в зёрнах Elite" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-milk-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp" alt="сухая молочная смесь" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp"
+                  alt="сухая молочная смесь" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-irish-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp" alt="капучино Ирландский Виски" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp"
+                  alt="капучино Ирландский Виски" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-catalana-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp" alt="капучино Крема Каталана" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp"
+                  alt="капучино Крема Каталана" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-cacao-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp" alt="горячий какао" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp"
+                  alt="горячий какао" />
+              </a>
             </div>
           </div>
         </div>
@@ -590,8 +596,8 @@
           <div>
             <h5 class="green text-center">НЕ ЗНАЕТЕ, КАКУЮ КОФЕМАШИНУ ВЫБРАТЬ?</h5>
             <p class="indent">
-              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе,
- учитывая ваши предпочтения и потребности.
+              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе, учитывая
+              ваши предпочтения и потребности.
             </p>
           </div>
         </div>
@@ -661,27 +667,64 @@
         <div class="row">
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
-              <p>Кофе на заправке – это не только удобство, но и немаловажная часть сервиса, который вы предлагаете своим клиентам. Качественный 
-                кофе может сделать их путешествие более приятным, поэтому аренда кофемашины для АЗС становится идеальным решением для привлечения новых клиентов и повышения их лояльности.</p>
-                <h4>Почему стоит арендовать кофемашину для вашей АЗС?</h4>
-                <ol>
-                <li><strong>Повышение уровня обслуживания.</strong> Наличие профессионального кофемашины на вашей АЗС поднимет уровень сервиса на новую ступень. Клиенты смогут насладиться свежим, 
-                  качественным кофе, что будет способствовать их удовлетворению и желанию возвращаться именно к вам.</li>
-                  <li><strong>Бесплатная установка и сервис.</strong> Мы предоставляем комплексный сервис: от бесплатной установки кофемашины до регулярного технического обслуживания. Вы получаете 
-                    готовое решение без лишних хлопот, сосредотачиваясь на своем бизнесе.</li>
-                    <li><strong>Увеличение прибыли.</strong> Кофе – это дополнительный доход для вашей АЗС. Благодаря привлекательным условиям аренды вы сможете предложить клиентам популярный продукт и 
-                      получать дополнительную прибыль без значительных инвестиций.</li>
-                      <li><strong>Гибкие условия аренды.</strong> Мы предлагаем различные пакеты аренды кофемашин, позволяющие выбрать наиболее подходящий вариант в зависимости от потребностей вашей АЗС. 
-                        Независимо от размера станции, мы найдем оптимальное решение.</li>
-                        <li><strong>Разнообразие кофейных напитков.</strong> Аренда кофемашины позволяет предлагать широкий ассортимент напитков: от классического эспрессо до капучино и латте. 
-                          Ваши клиенты всегда найдут что-то по вкусу, что превратит их остановку в настоящее удовольствие.</li>
-                      </ol>
-                        <h4>Преимущества сотрудничества с нами</h4>
-                        <ul>
-                          <li><strong>Качественные кофемашины</strong> от ведущих производителей, обеспечивающих стабильно высокое качество напитков.</li>
-                          <li><strong>Полная сервисная поддержка,</strong> гарантирующая бесперебойную работу оборудования.</li>
-                          <li><strong>Обучение персонала</strong> чтобы ваши сотрудники могли без проблем работать с кофемашиной и предоставлять лучший сервис.</li>
-                        </ul>
+              <p>
+                Кофе на заправке – это не только удобство, но и немаловажная часть
+                сервиса, который вы предлагаете своим клиентам. Качественный кофе может
+                сделать их путешествие более приятным, поэтому аренда кофемашины для АЗС
+                становится идеальным решением для привлечения новых клиентов и повышения
+                их лояльности.
+              </p>
+              <h4>Почему стоит арендовать кофемашину для вашей АЗС?</h4>
+              <ol>
+                <li>
+                  <strong>Повышение уровня обслуживания.</strong>
+                  Наличие профессионального кофемашины на вашей АЗС поднимет уровень
+                  сервиса на новую ступень. Клиенты смогут насладиться свежим,
+                  качественным кофе, что будет способствовать их удовлетворению и желанию
+                  возвращаться именно к вам.
+                </li>
+                <li>
+                  <strong>Бесплатная установка и сервис.</strong>
+                  Мы предоставляем комплексный сервис: от бесплатной установки кофемашины
+                  до регулярного технического обслуживания. Вы получаете готовое решение
+                  без лишних хлопот, сосредотачиваясь на своем бизнесе.
+                </li>
+                <li>
+                  <strong>Увеличение прибыли.</strong>
+                  Кофе – это дополнительный доход для вашей АЗС. Благодаря привлекательным
+                  условиям аренды вы сможете предложить клиентам популярный продукт и
+                  получать дополнительную прибыль без значительных инвестиций.
+                </li>
+                <li>
+                  <strong>Гибкие условия аренды.</strong>
+                  Мы предлагаем различные пакеты аренды кофемашин, позволяющие выбрать
+                  наиболее подходящий вариант в зависимости от потребностей вашей АЗС.
+                  Независимо от размера станции, мы найдем оптимальное решение.
+                </li>
+                <li>
+                  <strong>Разнообразие кофейных напитков.</strong>
+                  Аренда кофемашины позволяет предлагать широкий ассортимент напитков: от
+                  классического эспрессо до капучино и латте. Ваши клиенты всегда найдут
+                  что-то по вкусу, что превратит их остановку в настоящее удовольствие.
+                </li>
+              </ol>
+              <h4>Преимущества сотрудничества с нами</h4>
+              <ul>
+                <li>
+                  <strong>Качественные кофемашины</strong>
+                  от ведущих производителей, обеспечивающих стабильно высокое качество
+                  напитков.
+                </li>
+                <li>
+                  <strong>Полная сервисная поддержка,</strong>
+                  гарантирующая бесперебойную работу оборудования.
+                </li>
+                <li>
+                  <strong>Обучение персонала</strong>
+                  чтобы ваши сотрудники могли без проблем работать с кофемашиной и
+                  предоставлять лучший сервис.
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -891,18 +934,23 @@
           autoplay: true,
           centerMode: false,
           variableWidth: false,
-          adaptiveHeight: true,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
               settings: {
                 slidesToShow: 3,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
+              },
+            },
+            {
+              breakpoint: 560,
+              settings: {
+                slidesToShow: 1,
               },
             },
           ],
