--- a/src/ru/dlya_ofisov.html
+++ b/src/ru/dlya_ofisov.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Автоматическая кофемашина для офиса в аренду | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
@@ -366,9 +361,7 @@
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
-                <h5 class="fw-bold">
-                  Привлечение и удержание талантов
-                </h5>
+                <h5 class="fw-bold">Привлечение и удержание талантов</h5>
                 <p class="card-text main-text-size">
                   Современные офисы с удобствами, такими как кофемашины, более
                   привлекательны для высококвалифицированных специалистов.
@@ -380,10 +373,7 @@
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
-                <h5 class="fw-bold">
-                  Экономия средств
-                 
-                </h5>
+                <h5 class="fw-bold">Экономия средств</h5>
                 <p class="card-text main-text-size">
                   Аренда кофейного аппарата дешевле, чем ежедневные расходы на покупку
                   кофе в кафе.
@@ -405,17 +395,25 @@
           <h5 class="">Что мы предлагаем?</h5>
           <ul class="main-text-size">
             <li>
-              Кофемашина в аренду для офисав предоставляется бесплатно, при условии приобретения нашего кофе.
+              Кофемашина в аренду для офисав предоставляется бесплатно, при условии
+              приобретения нашего кофе.
             </li>
             <li>
-              Кроме обычного зернового кофе, мы предлагаем большой ассортимент других вкусных горячих напитков, таких как капучино, мокачино, латте, шоколад, чай и другие.
-            </li>
-            <li>Вам не нужно беспокоиться о ремонте и наполнении кофемашины. Мы обеспечим полное сервисное сопровождение в течение всего арендного периода.</li>
-            <li>
-              Наши специалисты проведут мастер-класс для ваших сотрудников по работе с выбранной кофеваркой.
+              Кроме обычного зернового кофе, мы предлагаем большой ассортимент других
+              вкусных горячих напитков, таких как капучино, мокачино, латте, шоколад, чай
+              и другие.
             </li>
             <li>
-              Если у вас есть несколько фелиалов, мы можем поставить кофемашину в каждый, при условии, что в этом регионе есть наш представитель.
+              Вам не нужно беспокоиться о ремонте и наполнении кофемашины. Мы обеспечим
+              полное сервисное сопровождение в течение всего арендного периода.
+            </li>
+            <li>
+              Наши специалисты проведут мастер-класс для ваших сотрудников по работе с
+              выбранной кофеваркой.
+            </li>
+            <li>
+              Если у вас есть несколько фелиалов, мы можем поставить кофемашину в каждый,
+              при условии, что в этом регионе есть наш представитель.
             </li>
           </ul>
         </div>
@@ -435,7 +433,7 @@
           </div>
         </div>
         <div class="row justify-content-md-center">
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-gaia-touch-ru">
                 <img
@@ -445,7 +443,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-coro-ru">
                 <img
@@ -455,7 +453,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-korinto-ru">
                 <img
@@ -465,7 +463,7 @@
               </a>
             </div>
           </div>
-          <div class="col-2">
+          <div class="col col-md-3 col-lg-2">
             <div class="img-fluid">
               <a href="./avtomaty.html#ancor-minibona-ru">
                 <img
@@ -485,40 +483,51 @@
           <div class="container text-center">
             <div class="row justify-content-between">
               <div class="col-4">КОФЕ И ГОРЯЧИЕ НАПИТКИ</div>
-              <div class="col-4">
-              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="slider">
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-beans-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp" alt="кофе зерновой Beabs Blend" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp"
+                  alt="кофе зерновой Beabs Blend" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-elite-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp" alt="кофе в зёрнах Elite" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp"
+                  alt="кофе в зёрнах Elite" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-milk-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp" alt="сухая молочная смесь" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp"
+                  alt="сухая молочная смесь" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-irish-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp" alt="капучино Ирландский Виски" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp"
+                  alt="капучино Ирландский Виски" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-catalana-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp" alt="капучино Крема Каталана" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp"
+                  alt="капучино Крема Каталана" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-cacao-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp" alt="горячий какао" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp"
+                  alt="горячий какао" />
+              </a>
             </div>
           </div>
         </div>
@@ -576,7 +585,8 @@
                 <h5>Обслуживание</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Полное сопровождение и бесплатная техническая поддержка на протяжении всего сотрудничества.
+                    Полное сопровождение и бесплатная техническая поддержка на протяжении
+                    всего сотрудничества.
                   </small>
                 </p>
               </div>
@@ -638,7 +648,8 @@
                 <h5>Обслуживание</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Полное сопровождение и бесплатная техническая поддержка на протяжении всего сотрудничества.
+                    Полное сопровождение и бесплатная техническая поддержка на протяжении
+                    всего сотрудничества.
                   </small>
                 </p>
               </div>
@@ -655,8 +666,8 @@
           <div>
             <h5 class="green text-center">НЕ ЗНАЕТЕ, КАКУЮ КОФЕМАШИНУ ВЫБРАТЬ?</h5>
             <p class="indent">
-              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе,
-              учитывая ваши предпочтения и потребности.
+              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе, учитывая
+              ваши предпочтения и потребности.
             </p>
           </div>
         </div>
@@ -726,23 +737,47 @@
         <div class="row">
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
-              <p>Все мы знаем, что кофе – это больше чем просто напиток. Это ритуал, объединяющий коллектив, заряжающий энергией и вдохновляющий 
-                на новые свершения. Кофе в офисе становится важной частью рабочего дня, помогая сотрудникам оставаться сосредоточенными и мотивированными.</p>
-                <h4>Почему качественный кофе важен для вашего офиса?</h4>
-                <ol>
-                <li><strong>Повышение производительности.</strong> Исследования показывают, что кофе поможет улучшить концентрацию и умственную активность. 
-                  Она способствует лучшему выполнению задач, особенно утром и после обеда.</li>
-                  <li><strong>Создание атмосферы.</strong> Аромат свежесваренного кофе наполняет офис приятной атмосферой, которая помогает снять напряжение и 
-                    делает рабочую среду более комфортной.</li>
-                    <li><strong>Социализация.</strong> Кофе – это повод для общения. Общие кофейные перерывы помогают укрепить командный дух, создавая непринужденную 
-                      возможность для обсуждения идей и решения рабочих вопросов.</li>
-                      <li><strong>Забота о сотрудниках.</strong> Предоставление качественного кофе в офисе демонстрирует заботу о благополучии персонала. 
-                        Это небольшой, но важный бонус, повышающий лояльность сотрудников к компании.</li>
-                      </ol>
-                        <h4>Наши решения для вашего офиса</h4>
-                        <p>Мы предлагаем комплексный подход к организации кофейного сервиса в офисе. Наши кофемашины и тщательно подобранные рецепты напитков обеспечат максимальный вкус 
-                          и удовольствие вашей команды. 
-                        От обслуживания оборудования до проведения мастер-классов для вашего персонала — мы предоставим все необходимое для того, чтобы каждый кофейный перерыв стал особенным.</p>
+              <p>
+                Все мы знаем, что кофе – это больше чем просто напиток. Это ритуал,
+                объединяющий коллектив, заряжающий энергией и вдохновляющий на новые
+                свершения. Кофе в офисе становится важной частью рабочего дня, помогая
+                сотрудникам оставаться сосредоточенными и мотивированными.
+              </p>
+              <h4>Почему качественный кофе важен для вашего офиса?</h4>
+              <ol>
+                <li>
+                  <strong>Повышение производительности.</strong>
+                  Исследования показывают, что кофе поможет улучшить концентрацию и
+                  умственную активность. Она способствует лучшему выполнению задач,
+                  особенно утром и после обеда.
+                </li>
+                <li>
+                  <strong>Создание атмосферы.</strong>
+                  Аромат свежесваренного кофе наполняет офис приятной атмосферой, которая
+                  помогает снять напряжение и делает рабочую среду более комфортной.
+                </li>
+                <li>
+                  <strong>Социализация.</strong>
+                  Кофе – это повод для общения. Общие кофейные перерывы помогают укрепить
+                  командный дух, создавая непринужденную возможность для обсуждения идей и
+                  решения рабочих вопросов.
+                </li>
+                <li>
+                  <strong>Забота о сотрудниках.</strong>
+                  Предоставление качественного кофе в офисе демонстрирует заботу о
+                  благополучии персонала. Это небольшой, но важный бонус, повышающий
+                  лояльность сотрудников к компании.
+                </li>
+              </ol>
+              <h4>Наши решения для вашего офиса</h4>
+              <p>
+                Мы предлагаем комплексный подход к организации кофейного сервиса в офисе.
+                Наши кофемашины и тщательно подобранные рецепты напитков обеспечат
+                максимальный вкус и удовольствие вашей команды. От обслуживания
+                оборудования до проведения мастер-классов для вашего персонала — мы
+                предоставим все необходимое для того, чтобы каждый кофейный перерыв стал
+                особенным.
+              </p>
             </div>
           </div>
         </div>
@@ -952,18 +987,23 @@
           autoplay: true,
           centerMode: false,
           variableWidth: false,
-          adaptiveHeight: true,
           responsive: [
             {
-              breakpoint: 992,
+              breakpoint: 1220,
               settings: {
                 slidesToShow: 3,
               },
             },
             {
-              breakpoint: 768,
+              breakpoint: 978,
               settings: {
                 slidesToShow: 2,
+              },
+            },
+            {
+              breakpoint: 560,
+              settings: {
+                slidesToShow: 1,
               },
             },
           ],
